Fixed margins for header items (took out extra whitespace).

--- a/src/index.css
+++ b/src/index.css
@@ -27,17 +27,19 @@ body {
 
 /* Header styling */
 header {
-  height: fit-content;
+  width: 100vw;
   display: flex;
-  justify-content: space-around;
+  align-items: center;
   background-color: var(--tertiary-color);
 }
 
-#business-title, ul {
-  margin: auto;
+#business-title {
+  margin-right: auto;
+  padding-left: 1.5rem;
 }
 
 ul {
+  margin-left: auto;
   list-style-type: none;
 }
 
@@ -54,6 +56,7 @@ a, a:visited {
 a:hover, button:hover {
   color: var(--hover-color);
   transition: 0.4s;
+  cursor: pointer;
 }
 
 input, button {
@@ -70,10 +73,10 @@ input, button {
 .item {
   margin-top: 2rem;
   display: block;
-  background-color: red;
+  background-color: var(--tertiary-color);
   height: fit-content;
   width: fit-content;
-  background-color: var(--tertiary-color);
+  padding-bottom: 1rem;
 }
 
 .item img {
